--- a/AutoMall/ViewControllers/Login_Register/RegisterViewController.xib
+++ b/AutoMall/ViewControllers/Login_Register/RegisterViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -319,11 +319,11 @@
                     </variation>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahM-zy-pf3">
-                    <rect key="frame" x="161" y="290" width="199" height="30"/>
+                    <rect key="frame" x="161" y="290" width="92" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="HvZ-d5-XYj"/>
                     </constraints>
-                    <state key="normal" title="《用户行为规范及免责声明》">
+                    <state key="normal" title="《服务条款》">
                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <variation key="default">
