--- a/AutoMall/ViewControllers/Upkeep/BaoyangHistoryCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/BaoyangHistoryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyCell" rowHeight="66" id="KGk-i7-Jjw" customClass="BaoyangHistoryCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyCell" rowHeight="132" id="KGk-i7-Jjw" customClass="BaoyangHistoryCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="65.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="98.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技师：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iK4-75-Haf">
-                        <rect key="frame" x="17" y="36.5" width="40" height="21"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技师：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iK4-75-Haf">
+                        <rect key="frame" x="232" y="39" width="40" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Lv7-qy-aXT"/>
                         </constraints>
@@ -27,8 +27,8 @@
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无数据" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yL2-49-5Hs">
-                        <rect key="frame" x="57" y="36.5" width="40" height="21"/>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无数据" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yL2-49-5Hs">
+                        <rect key="frame" x="272" y="39" width="40" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="J1D-0V-oD4"/>
                         </constraints>
@@ -37,7 +37,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="保养时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6O-cQ-xyE">
-                        <rect key="frame" x="197" y="8" width="66.5" height="21"/>
+                        <rect key="frame" x="17" y="39" width="66.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="rBf-9I-7yo"/>
                         </constraints>
@@ -46,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无数据" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="62c-Pe-yGw">
-                        <rect key="frame" x="271.5" y="8" width="40" height="21"/>
+                        <rect key="frame" x="92" y="39" width="40" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="AAr-sZ-9YF"/>
                         </constraints>
@@ -55,7 +55,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总里程：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="omq-KB-dQT">
-                        <rect key="frame" x="16" y="8" width="53.5" height="21"/>
+                        <rect key="frame" x="16" y="69.5" width="53.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="W0N-wP-I0u"/>
                         </constraints>
@@ -64,7 +64,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无数据" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0S-pS-Fuv">
-                        <rect key="frame" x="69.5" y="8" width="40" height="21"/>
+                        <rect key="frame" x="69" y="70" width="40" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="s5x-ZI-WRd"/>
                         </constraints>
@@ -73,7 +73,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="金额：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ok8-fk-ADn">
-                        <rect key="frame" x="232" y="36.5" width="40" height="21"/>
+                        <rect key="frame" x="232" y="69.5" width="40" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="grO-ti-6Ev"/>
                         </constraints>
@@ -82,9 +82,27 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无数据" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtl-NZ-g0C">
-                        <rect key="frame" x="272" y="36.5" width="40" height="21"/>
+                        <rect key="frame" x="272" y="69.5" width="40" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="58T-77-nPA"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="订单号：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLM-y8-xXS">
+                        <rect key="frame" x="17" y="8" width="53.5" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="bRS-CM-YlD"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无数据" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c45-3O-Fav">
+                        <rect key="frame" x="78" y="8" width="40" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="vlj-BZ-jy3"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
@@ -93,30 +111,35 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="H0S-pS-Fuv" firstAttribute="centerY" secondItem="omq-KB-dQT" secondAttribute="centerY" id="0s2-8A-tPG"/>
-                    <constraint firstItem="omq-KB-dQT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="4Na-M6-bH9"/>
-                    <constraint firstAttribute="trailing" secondItem="62c-Pe-yGw" secondAttribute="trailing" constant="8" id="66h-iH-nRr"/>
-                    <constraint firstItem="62c-Pe-yGw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="6NM-o7-fsS"/>
+                    <constraint firstAttribute="bottom" secondItem="omq-KB-dQT" secondAttribute="bottom" constant="8" id="1Sf-9S-aXm"/>
                     <constraint firstItem="mtl-NZ-g0C" firstAttribute="centerY" secondItem="Ok8-fk-ADn" secondAttribute="centerY" id="6bD-bR-J8G"/>
                     <constraint firstAttribute="bottom" secondItem="mtl-NZ-g0C" secondAttribute="bottom" constant="8" id="6v4-9E-WEW"/>
-                    <constraint firstItem="iK4-75-Haf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="F1f-nv-iji"/>
                     <constraint firstItem="yL2-49-5Hs" firstAttribute="leading" secondItem="iK4-75-Haf" secondAttribute="trailing" id="Iia-xZ-cWC"/>
+                    <constraint firstItem="bLM-y8-xXS" firstAttribute="centerY" secondItem="c45-3O-Fav" secondAttribute="centerY" id="NLj-Ii-YbE"/>
                     <constraint firstAttribute="trailing" secondItem="mtl-NZ-g0C" secondAttribute="trailing" constant="8" id="Qtn-EA-yKF"/>
+                    <constraint firstItem="c45-3O-Fav" firstAttribute="leading" secondItem="bLM-y8-xXS" secondAttribute="trailing" constant="8" id="c6u-XF-49m"/>
+                    <constraint firstItem="N6O-cQ-xyE" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="dd6-ok-Abp"/>
                     <constraint firstItem="yL2-49-5Hs" firstAttribute="centerY" secondItem="iK4-75-Haf" secondAttribute="centerY" id="fE2-kL-bBT"/>
                     <constraint firstItem="mtl-NZ-g0C" firstAttribute="leading" secondItem="Ok8-fk-ADn" secondAttribute="trailing" id="gap-hI-BWb"/>
+                    <constraint firstItem="yL2-49-5Hs" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="hTa-Fn-CAO"/>
+                    <constraint firstItem="bLM-y8-xXS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="kWv-8g-21J"/>
                     <constraint firstItem="62c-Pe-yGw" firstAttribute="leading" secondItem="N6O-cQ-xyE" secondAttribute="trailing" constant="8" id="mFf-E8-w28"/>
                     <constraint firstItem="omq-KB-dQT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="mJ6-RI-ei4"/>
                     <constraint firstItem="H0S-pS-Fuv" firstAttribute="leading" secondItem="omq-KB-dQT" secondAttribute="trailing" id="mod-LH-3WN"/>
-                    <constraint firstAttribute="bottom" secondItem="iK4-75-Haf" secondAttribute="bottom" constant="8" id="tGA-gj-Yoo"/>
+                    <constraint firstItem="N6O-cQ-xyE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="mwi-wC-bck"/>
+                    <constraint firstAttribute="trailing" secondItem="yL2-49-5Hs" secondAttribute="trailing" constant="8" id="vEd-EK-H51"/>
                     <constraint firstItem="N6O-cQ-xyE" firstAttribute="centerY" secondItem="62c-Pe-yGw" secondAttribute="centerY" id="xCw-L9-g5c"/>
+                    <constraint firstItem="bLM-y8-xXS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="ycF-Zw-OFO"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateL" destination="62c-Pe-yGw" id="gur-7T-U4J"/>
                 <outlet property="lichengL" destination="H0S-pS-Fuv" id="si9-XN-hwP"/>
                 <outlet property="moneyL" destination="mtl-NZ-g0C" id="i8A-fm-1Xo"/>
+                <outlet property="orderL" destination="c45-3O-Fav" id="Uc8-fu-Hot"/>
                 <outlet property="technicianName" destination="yL2-49-5Hs" id="7bu-lW-Yo6"/>
             </connections>
-            <point key="canvasLocation" x="-329" y="-39"/>
+            <point key="canvasLocation" x="-520" y="-59"/>
         </tableViewCell>
     </objects>
 </document>
