--- a/AutoMall/ViewControllers/Upkeep/UpkeepCarMarkVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/UpkeepCarMarkVC.xib
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UpkeepCarMarkVC">
             <connections>
+                <outlet property="bgView" destination="iuE-O9-AiF" id="Dcc-rI-k02"/>
                 <outlet property="dentBtn" destination="3HQ-gz-2Ic" id="nAo-cb-1co"/>
                 <outlet property="dirtBtn" destination="JJo-Gb-PkD" id="iCV-8x-Rk8"/>
                 <outlet property="imageV" destination="Tex-hN-C2V" id="Abn-Vf-fbo"/>
@@ -42,19 +44,31 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DLE-fB-ZhW">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <subviews>
-                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carMark" translatesAutoresizingMaskIntoConstraints="NO" id="Tex-hN-C2V" customClass="WPImageView">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iuE-O9-AiF">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
+                            <subviews>
+                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carMark" translatesAutoresizingMaskIntoConstraints="NO" id="Tex-hN-C2V" customClass="WPImageView">
+                                    <rect key="frame" x="0.0" y="178.5" width="375" height="243"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="Tex-hN-C2V" secondAttribute="height" multiplier="2415:1564" id="ERT-MW-fVe"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="600" id="m9c-6a-CT1"/>
+                                <constraint firstAttribute="height" constant="600" id="AoH-C7-dgi"/>
+                                <constraint firstItem="Tex-hN-C2V" firstAttribute="centerY" secondItem="iuE-O9-AiF" secondAttribute="centerY" id="ZFh-up-xvs"/>
+                                <constraint firstItem="Tex-hN-C2V" firstAttribute="leading" secondItem="iuE-O9-AiF" secondAttribute="leading" id="ee8-Zg-8Lu"/>
+                                <constraint firstAttribute="trailing" secondItem="Tex-hN-C2V" secondAttribute="trailing" id="eks-rb-Msy"/>
                             </constraints>
-                        </imageView>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="Tex-hN-C2V" secondAttribute="bottom" id="6Gc-jj-CHt"/>
-                        <constraint firstItem="Tex-hN-C2V" firstAttribute="top" secondItem="DLE-fB-ZhW" secondAttribute="top" id="A17-Wz-Pyo"/>
-                        <constraint firstItem="Tex-hN-C2V" firstAttribute="leading" secondItem="DLE-fB-ZhW" secondAttribute="leading" id="M1b-3c-O0K"/>
-                        <constraint firstAttribute="trailing" secondItem="Tex-hN-C2V" secondAttribute="trailing" id="hHH-w4-dYl"/>
+                        <constraint firstAttribute="bottom" secondItem="iuE-O9-AiF" secondAttribute="bottom" id="2xI-4m-eIw"/>
+                        <constraint firstItem="iuE-O9-AiF" firstAttribute="leading" secondItem="DLE-fB-ZhW" secondAttribute="leading" id="YDj-rs-DgA"/>
+                        <constraint firstItem="iuE-O9-AiF" firstAttribute="top" secondItem="DLE-fB-ZhW" secondAttribute="top" id="qSK-aT-gVr"/>
+                        <constraint firstAttribute="trailing" secondItem="iuE-O9-AiF" secondAttribute="trailing" id="uhf-uZ-49k"/>
                     </constraints>
                     <connections>
                         <outlet property="delegate" destination="-1" id="NFw-ES-5rk"/>
@@ -178,6 +192,7 @@
             <constraints>
                 <constraint firstItem="juX-SI-iRg" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1U6-XC-GKK"/>
                 <constraint firstAttribute="trailing" secondItem="juX-SI-iRg" secondAttribute="trailing" id="1vk-Zh-VlI"/>
+                <constraint firstItem="iuE-O9-AiF" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="5YF-mT-M8D"/>
                 <constraint firstAttribute="trailing" secondItem="3p7-ks-pZV" secondAttribute="trailing" id="7Ui-57-CM6"/>
                 <constraint firstAttribute="bottom" secondItem="juX-SI-iRg" secondAttribute="bottom" id="80q-8u-9PR"/>
                 <constraint firstItem="juX-SI-iRg" firstAttribute="top" secondItem="3p7-ks-pZV" secondAttribute="bottom" constant="50" id="CrI-sn-Pzk"/>
@@ -186,9 +201,8 @@
                 <constraint firstItem="juX-SI-iRg" firstAttribute="top" secondItem="DLE-fB-ZhW" secondAttribute="bottom" id="aNE-a6-mpK"/>
                 <constraint firstAttribute="trailing" secondItem="DLE-fB-ZhW" secondAttribute="trailing" id="dBI-3w-Npf"/>
                 <constraint firstItem="DLE-fB-ZhW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="fzr-5h-w9u"/>
-                <constraint firstItem="Tex-hN-C2V" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="i6v-Wi-Rb0"/>
             </constraints>
-            <point key="canvasLocation" x="5.5" y="57.5"/>
+            <point key="canvasLocation" x="14.5" y="36.5"/>
         </view>
     </objects>
     <resources>
