--- a/AutoMall/ViewControllers/PersonalCenter/UpkeepStatementVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/UpkeepStatementVC.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -163,7 +163,7 @@
                     </constraints>
                 </view>
                 <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Pm-l1-IWf">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="84" width="375" height="583"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paG-cw-wJm">
                             <rect key="frame" x="10" y="8" width="60" height="30"/>
@@ -224,7 +224,7 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="5Pm-l1-IWf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="9SF-VU-h2u"/>
+                <constraint firstItem="5Pm-l1-IWf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="84" id="9SF-VU-h2u"/>
                 <constraint firstAttribute="trailing" secondItem="dTX-Id-pEs" secondAttribute="trailing" id="9oS-wb-9JG"/>
                 <constraint firstItem="dTX-Id-pEs" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="Hej-GB-Hrb"/>
                 <constraint firstItem="5Pm-l1-IWf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="UMJ-tc-4h5"/>
